--- a/argocd/example-app/deployment.yaml
+++ b/argocd/example-app/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: argocd-example-app
 spec:
-  replicas: 0 # You can adjust the number of replicas
+  replicas: 2 # You can adjust the number of replicas
   selector:
     matchLabels:
       app: argocd-example-app
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: argocd-example-app
-        image: liquidreply/argocd-example-app:1
+        image: quay.io/filiphavlicek/k8s-debug:nonroot
         ports:
-        - containerPort: 3000 # Assuming your app runs on port 3000
+        - containerPort: 8080 # Assuming your app runs on port 3000
